# ViKey

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml
app-linux/: Cargo.toml  README.md
app-linux/src/: main.rs  settings.rs
app-macos/: README.md  build.sh
app-macos/ViKey/Resources/: AppIcon.icns  Info.plist  ViKey.tiff
app-macos/ViKey/Sources/: RustBridge.swift  Settings.swift  ViKey-Bridging-Header.h  ViKeyInputController.swift  main.swift
app-native/: README.md  ViKey.vcxproj  VietnameseIME.vcxproj.filters
app-native/src/: app_detector.cpp  hotkey.cpp  hotkey.h  ime_processor.cpp  ime_processor.h  keyboard_hook.cpp  keyboard_hook.h  keycodes.cpp  keycodes.h  main.cpp  resource.h  resource.rc  rust_bridge.cpp  rust_bridge.h  settings.cpp  settings.h  shortcut_manager.cpp  shortcut_manager.h  text_sender.cpp  text_sender.h  tray_icon.cpp  tray_icon.h  updater.cpp
core/: Cargo.toml
core/src/: lib.rs
core/src/data/: constants.rs  english_dict.rs  keys.rs
core/src/engine/: mod.rs  shortcut.rs  syllable.rs  transform.rs
core/src/input/: telex.rs  vni.rs
core/src/updater/: mod.rs
docs/: index.html
scripts/: build-core.ps1  build-macos.sh  build-native.ps1  package-native.ps1
