[package]
name = "vikey-core"
version = "1.2.0"
edition = "2021"
license = "BSD-3-Clause"
description = "ViKey - Vietnamese input method core engine"
repository = "https://github.com/kmis8x/ViKey"

[lib]
name = "vikey_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Minimal dependencies for core engine

[dev-dependencies]
rstest = "0.18"
serial_test = "3.0"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller binary
